# rk3588_hdmi_in_out

./: CMakeLists.txt  framebuffer.cpp  framebuffer.h  hdmi_in.cpp  hdmi_in.h  main.cpp  readme.md  test.py  update_edid.cpp
config/: config.yaml  yolo_postprocess.yaml
image_process/yolo/: yolo_postprocess.cpp  yolo_postprocess.h  yolo_preprocess.cpp  yolo_preprocess.h
play_video/: main.cpp
save_image/: main.cpp
utils/: threadpool.h  tools.cpp  tools.h  yolo_threadpool.cpp  yolo_threadpool.h
